--- a/shop-list.html
+++ b/shop-list.html
@@ -114,13 +114,11 @@
       border: none;
       padding: 14px 18px;
       font-size: 1.1rem;
-      color: #005f73;
+      color: #ffffff;
       text-align: left;
       cursor: pointer;
-      font-family: 'Roboto', Arial, sans-serif;
       transition: background 0.15s;
       border-bottom: 1px solid #e0f7fa;
-      outline: none;
     }
 
     .profile-menu button:last-child {
@@ -130,10 +128,6 @@
     .profile-menu button:hover, .profile-menu button:focus {
       background: #e0f7fa;
       color: #00aaff;
-    }
-
-    h1 {
-      display: none;
     }
 
     body {
@@ -152,12 +146,10 @@
       width: 100%;
       margin: 24px auto 0 auto;
       position: relative;
-      z-index: 1;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 28px;
-      contain: layout style;
       box-sizing: border-box;
     }
 
@@ -165,20 +157,19 @@
       flex: 1 1 340px;
       min-width: 260px;
       max-width: 400px;
-      background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);
+      background: linear-gradient(90deg, #ffffff 60%, #dee2e3 100%);
       border-radius: 18px;
       box-shadow: 0 4px 16px rgba(0,0,0,0.3);
       overflow: hidden;
       text-align: center;
       cursor: pointer;
       position: relative;
-      border: 2px solid #40E0D0;
+      border: 2px solid #005f73;
       display: flex;
       flex-direction: column;
       align-items: center;
       color: white;
-      margin: 0;
-      transition: box-shadow 0.15s;
+      transition: 0.15s;
     }
 
     .shop-card.closed {
@@ -187,160 +178,71 @@
       filter: grayscale(0.2);
     }
 
-    .shop-card:hover {
-      box-shadow: 0 8px 24px rgba(0,0,0,0.4);
-      border-color: #00CED1;
-    }
-
     .shop-card img {
       width: 100%;
       height: 200px;
       object-fit: cover;
-      object-position: top;
-      border-top-left-radius: 18px;
-      border-top-right-radius: 18px;
-      background: #f0f8ff;
-      aspect-ratio: 3 / 2;
-      display: block;
     }
 
     .shop-card h3 {
       margin: 16px 0 10px 0;
-      color: white;
+      color: rgb(0, 0, 0);
       font-size: 2rem;
       font-weight: 700;
-      letter-spacing: 0.2px;
-      text-shadow: 0 1px 2px rgba(0,0,0,0.5);
     }
 
     .shop-card p {
-      color: #ddd;
+      color: #000000;
       padding: 0 16px 20px;
       font-size: 1rem;
-      min-height: 48px;
     }
 
     .shop-closed {
-      color: #fff;
+      color: white;
       font-weight: bold;
       background: #d32f2f;
       padding: 8px 0;
       border-radius: 8px;
-      margin: 10px 0 0 0;
+      margin: 10px 0;
       width: 90%;
       text-align: center;
-      font-size: 1.1em;
-      letter-spacing: 0.5px;
-      box-shadow: 0 2px 8px #d32f2f44;
-    }
-
-    @media (max-width: 900px) {
-      .container {
-        max-width: 98vw;
-        padding-left: 2vw;
-        padding-right: 2vw;
-      }
-      .header-bar {
-        max-width: 98vw;
-      }
-    }
-
-    @media (max-width: 700px) {
-      .header-bar {
-        padding: 12px 0 0 0;
-      }
-      .caf-title {
-        font-size: 1.5rem;
-        margin-left: 10px;
-      }
-      .profile-btn {
-        margin-right: 10px;
-      }
-      .container {
-        padding: 10px 2vw;
-        gap: 16px;
-        max-width: 100vw;
-      }
-      .shop-card {
-        flex: 1 1 90vw;
-        min-width: 90vw;
-        max-width: 98vw;
-        border-radius: 14px;
-        margin: 0 auto;
-      }
-      .shop-card img {
-        height: 150px;
-        border-top-left-radius: 14px;
-        border-top-right-radius: 14px;
-        aspect-ratio: 4 / 3;
-      }
-      .shop-card h3 {
-        font-size: 1.1rem;
-        margin: 10px 0 6px 0;
-      }
-      .shop-card p {
-        font-size: 0.9rem;
-        padding: 0 8px 10px;
-        min-height: auto;
-      }
-      .profile-menu {
-        right: 10px;
-      }
-    }
-
-    @media (max-width: 500px) {
-      .container {
-        padding: 8px 2vw;
-        gap: 10px;
-      }
-      .shop-card {
-        flex: 1 1 96vw;
-        min-width: 96vw;
-        max-width: 98vw;
-        margin: 0 auto;
-      }
-      .shop-card img {
-        height: 120px;
-        aspect-ratio: 5 / 3;
-      }
-      .caf-title {
-        font-size: 1.1rem;
-        margin-left: 6px;
-      }
-      .profile-btn img {
-        width: 38px;
-        height: 38px;
-      }
-      .profile-menu {
-        min-width: 120px;
-        right: 6px;
-        top: 48px;
-      }
     }
   </style>
 </head>
+
 <body>
   <div class="background"></div>
+
   <div class="header-bar">
-    <div class="caf-title">
-      <span>🍴</span>UNM Cafeteria
-    </div>
-    <button class="profile-btn" id="profileBtn" aria-label="Profile">
-      <img src="https://ui-avatars.com/api/?name=U&background=00aaff&color=fff&rounded=true" alt="Profile" />
+    <div class="caf-title"><span>🍴</span>UNM Cafeteria</div>
+
+    <button class="profile-btn" id="profileBtn">
+      <img id="profilePic" src="https://ui-avatars.com/api/?name=U&background=00aaff&color=fff&rounded=true">
     </button>
-     <div class="profile-menu" id="profileMenu">
+
+    <div class="profile-menu" id="profileMenu">
       <button onclick="window.location.href='student-home.html'">🏠 Home</button>
-      <button onclick="window.open('https://mail.google.com/mail/?view=cm&fs=1&to=absmods538@gmail.com&su=UNM%20Cafeteria%20Feedback','_blank')">💬 Feedback</button>
+      <button onclick="window.open('mailto:absmods538@gmail.com')">💬 Feedback</button>
     </div>
   </div>
-  <h1>UNM Cafeteria</h1>
+
   <div class="container" id="shopList"></div>
+
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js";
-    import { getFirestore, collection, onSnapshot } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
+    import { 
+      getAuth, 
+      onAuthStateChanged 
+    } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js";
+    import { 
+      getFirestore, 
+      collection, 
+      onSnapshot 
+    } from "https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js";
 
+    // FIXED CONFIG (corrected typo)
     const firebaseConfig = {
-      apiKey: "AIzaSyBQzrBURFwenjWEEnQMMIH7sOSqPq0Qtx0",
+      apiKey: "AIzaSyBQZrBURFwenjWEEnQMMIH7sOSqPq0Qtx0",
       authDomain: "unm-caf-orders.firebaseapp.com",
       projectId: "unm-caf-orders",
       storageBucket: "unm-caf-orders.appspot.com",
@@ -350,34 +252,36 @@
     };
 
     const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
     const db = getFirestore(app);
 
-    // Real-time shop list
     const shopList = document.getElementById("shopList");
     const vendorsRef = collection(db, "vendors");
 
-    onSnapshot(vendorsRef, (snapshot) => {
-      const shops = [];
-      snapshot.forEach(doc => {
-        const data = doc.data();
-        shops.push({
-          id: doc.id,
-          name: data.name,
-          imageURL: data.imageURL,
-          description: data.description,
-          isOpen: data.isOpen !== false // default to true if not set
-        });
-      });
+    // AUTH GUARD
+    onAuthStateChanged(auth, user => {
+      if (!user) {
+        alert("Please log in first.");
+        window.location.href = "student-login.html";
+        return;
+      }
 
-      requestAnimationFrame(() => {
-        let html = '';
-        shops.forEach(data => {
+      // Show user avatar
+      document.getElementById("profilePic").src =
+        `https://ui-avatars.com/api/?name=${user.email[0]}&background=00aaff&color=fff&rounded=true`;
+
+      // Load shops only if authenticated
+      onSnapshot(vendorsRef, (snapshot) => {
+        let html = "";
+        snapshot.forEach(doc => {
+          const d = doc.data();
           html += `
-            <div class="shop-card${!data.isOpen ? ' closed' : ''}" ${data.isOpen ? `onclick="window.location.href='menu.html?vendor=${data.id}'"` : ''}>
-              <img src="${data.imageURL || 'https://via.placeholder.com/300'}" alt="${data.name}" loading="lazy">
-              <h3>${data.name}</h3>
-              <p>${data.description || 'No description yet'}</p>
-              ${!data.isOpen ? `<div class="shop-closed">Shop is Closed</div>` : ''}
+            <div class="shop-card ${!d.isOpen ? 'closed' : ''}"
+              ${d.isOpen ? `onclick="window.location.href='menu.html?vendor=${doc.id}'"` : ""}>
+              <img src="${d.imageURL || 'https://via.placeholder.com/300'}">
+              <h3>${d.name}</h3>
+              <p>${d.description || "No description yet"}</p>
+              ${!d.isOpen ? `<div class="shop-closed">Shop is Closed</div>` : ""}
             </div>
           `;
         });
@@ -385,7 +289,7 @@
       });
     });
 
-    // Profile menu logic
+    // Profile Menu Toggle
     const profileBtn = document.getElementById('profileBtn');
     const profileMenu = document.getElementById('profileMenu');
     document.addEventListener('click', (e) => {
@@ -396,5 +300,6 @@
       }
     });
   </script>
+
 </body>
 </html>
