--- a/summary.html
+++ b/summary.html
@@ -363,6 +363,12 @@
     });
 
     window.submitOrder = async function () {
+      // Register service worker for FCM
+      if ('serviceWorker' in navigator) {
+        await navigator.serviceWorker.register('firebase-messaging-sw.js');
+        console.log("Service worker registered");
+      }
+
       onAuthStateChanged(auth, async (user) => {
         if (!user) {
           alert("You must be logged in to place an order.");
@@ -387,12 +393,22 @@
         // Get FCM token for the user
         let fcmToken = null;
         try {
-          // Use Firebase Messaging to get the token
           const messagingModule = await import('https://www.gstatic.com/firebasejs/10.12.2/firebase-messaging.js');
           const messaging = messagingModule.getMessaging(app);
           fcmToken = await messagingModule.getToken(messaging, { vapidKey: "BK8WocQC93HpCQb9ysqai2Hah6bD0hWJ6mEO7lLwpL1enk7QVfudQr5CTV7KU43md78i4gT7jjHEo7KD0lqwKds" });
         } catch (err) {
           console.warn("FCM token not available:", err);
+        }
+
+        // Save FCM token to student document
+        if (user && fcmToken) {
+          try {
+            const studentRef = doc(db, "students", user.uid);
+            await updateDoc(studentRef, { fcmToken: fcmToken });
+            console.log("🔥 FCM token saved for student:", user.uid);
+          } catch (err) {
+            console.error("Error saving fcmToken to student:", err);
+          }
         }
 
         try {
