--- a/order-status.html
+++ b/order-status.html
@@ -196,6 +196,8 @@
 
       const token = await messaging.getToken({
         vapidKey: "BK8WocQC93HpCQb9ysqai2Hah6bD0hWJ6mEO7lLwpL1enk7QVfudQr5CTV7KU43md78i4gT7jjHEo7KD0lqwKds"
+        serviceWorkerRegistration: registration,
+
       });
 
       if (!token) return;
