--- a/order-status.html
+++ b/order-status.html
@@ -164,16 +164,24 @@
 
     // Register service worker for push notifications
     if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('firebase-messaging-sw.js')
+      navigator.serviceWorker.register('./firebase-messaging-sw.js')
         .then(function(registration) {
           Notification.requestPermission().then(permission => {
             if (permission === "granted") {
               messaging.getToken({
-                vapidKey: "BK8WocQC93HpCQb9ysqai2Hah6bD0hWJ6mEO7lLwpL1enk7QVfudQr5CTV7KU43md78i4gT7jjHEo7KD0lqwKds"
+                vapidKey: "BK8WocQC93HpCQb9ysqai2Hah6bD0hWJ6mEO7lLwpL1enk7QVfudQr5CTV7KU43md78i4gT7jjHEo7KD0lqwKds",
+                serviceWorkerRegistration: registration,
               }).then(token => {
                 console.log("FCM Token:", token);
 
-               
+                // Save token to Firestore (optional but recommended)
+                firebase.firestore()
+                  .collection("fcmTokens")
+                  .doc(token)
+                  .set({
+                    token: token,
+                    createdAt: Date.now()
+                  });
               }).catch(err => {
                 console.error("Unable to get token", err);
               });
@@ -190,23 +198,9 @@
         alert(payload.notification.title + ": " + payload.notification.body);
       }
     });
-
-    firebase.auth().onAuthStateChanged(async (user) => {
-      if (!user) return;
-
-      const token = await messaging.getToken({
-        vapidKey: "BK8WocQC93HpCQb9ysqai2Hah6bD0hWJ6mEO7lLwpL1enk7QVfudQr5CTV7KU43md78i4gT7jjHEo7KD0lqwKds"
-        serviceWorkerRegistration: registration,
-
-      });
-
-      if (!token) return;
-
-      await firebase.firestore()
-        .collection("students")
-        .doc(user.uid)
-        .set({ fcmToken: token }, { merge: true });
-    });
   </script>
 </body>
 </html>
+
+
+
