--- a/shop-list.html
+++ b/shop-list.html
@@ -114,7 +114,7 @@
       border: none;
       padding: 14px 18px;
       font-size: 1.1rem;
-      color: #ffffff;
+      color: #000000; /* <-- changed from #ffffff to black */
       text-align: left;
       cursor: pointer;
       transition: background 0.15s;
@@ -127,7 +127,7 @@
 
     .profile-menu button:hover, .profile-menu button:focus {
       background: #e0f7fa;
-      color: #00aaff;
+      color: #172b90;
     }
 
     body {
