--- a/shop-list.html
+++ b/shop-list.html
@@ -3,18 +3,62 @@
 <head>
   <title>UNM Cafeteria – Food Shops</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
   <style>
+    /* Reduce font size and make it professional */
     html, body {
       height: 100%;
       margin: 0;
       padding: 0;
-      font-family: 'Roboto', Arial, sans-serif;
+      font-family: 'Lato', Arial, sans-serif; /* changed to Lato */
       min-height: 100vh;
       box-sizing: border-box;
       background: transparent;
       overflow-x: hidden;
       -webkit-overflow-scrolling: touch;
+      font-size: 15px;
+    }
+
+    /* Hexagon header background */
+    .hex-bg {
+      width: 100vw;
+      min-height: 200px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 0;
+      overflow: hidden;
+      pointer-events: none;
+      background: linear-gradient(135deg, #002a33 0%, #005a6e 50%, #006d7a 100%);
+    }
+    .hex-bg::before {
+      content: '';
+      position: absolute;
+      width: 150%;
+      height: 150%;
+      background-image: 
+        repeating-linear-gradient(60deg, transparent, transparent 35px, rgba(255,255,255,0.08) 35px, rgba(255,255,255,0.08) 70px),
+        repeating-linear-gradient(-60deg, transparent, transparent 35px, rgba(255,255,255,0.05) 35px, rgba(255,255,255,0.05) 70px);
+      animation: wave 15s linear infinite;
+    }
+    .hex-bg::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle at 30% 50%, rgba(0, 106, 122, 0.3), transparent 60%),
+                  radial-gradient(circle at 70% 30%, rgba(0, 90, 110, 0.2), transparent 50%);
+    }
+    @keyframes wave {
+      0% { transform: translateX(0) translateY(0); }
+      100% { transform: translateX(-70px) translateY(-70px); }
+    }
+    .header-bar {
+      position: relative;
+      z-index: 2;
+      background: transparent;
     }
 
     .background {
@@ -39,25 +83,23 @@
     .caf-title {
       flex: 1;
       text-align: left;
-      font-size: 2.5rem;
+      font-size: 1.8rem;
       font-weight: 900;
-      letter-spacing: 1.2px;
+      letter-spacing: 1.5px;
       margin: 0 0 0 24px;
-      background: linear-gradient(90deg, #005f73 30%, #00aaff 100%);
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-      text-shadow: 0 2px 12px rgba(0,0,0,0.10);
-      font-family: 'Roboto', Arial, sans-serif;
-      line-height: 1.1;
+      color: #ffffff;
+      text-shadow: 0 3px 15px rgba(0,0,0,0.3), 0 1px 3px rgba(0,0,0,0.4);
+      font-family: 'Lato', Arial, sans-serif;
+      line-height: 1.2;
       display: flex;
       align-items: center;
-      gap: 12px;
+      gap: 10px;
     }
 
     .caf-title span {
-      font-size: 2.2rem;
-      margin-right: 8px;
+      font-size: 1.6rem;
+      margin-right: 4px;
+      filter: drop-shadow(0 2px 4px rgba(0,0,0,0.3));
     }
 
     .profile-btn {
@@ -153,23 +195,31 @@
       box-sizing: border-box;
     }
 
+    /* Shop card styles */
     .shop-card {
       flex: 1 1 340px;
-      min-width: 260px;
-      max-width: 400px;
+      min-width: 180px;
+      max-width: 320px;
       background: linear-gradient(90deg, #ffffff 60%, #dee2e3 100%);
-      border-radius: 18px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.3);
+      border-radius: 14px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.12);
       overflow: hidden;
       text-align: center;
       cursor: pointer;
       position: relative;
-      border: 2px solid #005f73;
+      border: 1.5px solid #005f73;
       display: flex;
       flex-direction: column;
       align-items: center;
       color: white;
-      transition: 0.15s;
+      transition: transform 0.12s cubic-bezier(.4,0,.2,1), box-shadow 0.12s;
+      background: linear-gradient(90deg, #fff 60%, #f4f6f9 100%);
+      border: 1.5px solid #005f73;
+    }
+
+    .shop-card:hover {
+      transform: scale(0.96);
+      box-shadow: 0 1px 4px rgba(0,0,0,0.18);
     }
 
     .shop-card.closed {
@@ -180,21 +230,28 @@
 
     .shop-card img {
       width: 100%;
-      height: 200px;
+      height: 120px;
       object-fit: cover;
     }
 
     .shop-card h3 {
-      margin: 16px 0 10px 0;
+      margin: 12px 0 6px 0;
       color: rgb(0, 0, 0);
-      font-size: 2rem;
+      font-size: 1.1rem;
       font-weight: 700;
     }
 
     .shop-card p {
       color: #000000;
-      padding: 0 16px 20px;
-      font-size: 1rem;
+      padding: 0 12px 12px 12px;
+      font-size: 0.95rem;
+    }
+
+    /* Only animate on click/touch, not on hover */
+    .shop-card:active,
+    .shop-card.pressed {
+      transform: scale(0.96);
+      box-shadow: 0 1px 4px rgba(0,0,0,0.18);
     }
 
     .shop-closed {
@@ -207,25 +264,51 @@
       width: 90%;
       text-align: center;
     }
+
+    /* Responsive for mobile */
+    @media (max-width: 700px) {
+      .container {
+        max-width: 100vw;
+        margin: 0;
+        padding: 8px 4px 8px 4px;
+        gap: 12px;
+      }
+      .shop-card {
+        min-width: 98vw;
+        max-width: 99vw;
+        margin: 0 auto 10px auto;
+        border-radius: 10px;
+        font-size: 0.98rem;
+      }
+      .shop-card img {
+        height: 90px;
+      }
+      .caf-title {
+        font-size: 1.3rem;
+        margin-left: 12px;
+        letter-spacing: 1px;
+      }
+      .caf-title span {
+        font-size: 1.2rem;
+      }
+    }
   </style>
 </head>
-
 <body>
+  <div class="hex-bg"></div>
   <div class="background"></div>
-
+  
   <div class="header-bar">
     <div class="caf-title"><span>🍴</span>UNM Cafeteria</div>
-
     <button class="profile-btn" id="profileBtn">
       <img id="profilePic" src="https://ui-avatars.com/api/?name=U&background=00aaff&color=fff&rounded=true">
     </button>
-
     <div class="profile-menu" id="profileMenu">
       <button onclick="window.location.href='student-home.html'">🏠 Home</button>
       <button onclick="window.open('mailto:absmods538@gmail.com')">💬 Feedback</button>
     </div>
   </div>
-
+  
   <div class="container" id="shopList"></div>
 
   <script type="module">
@@ -298,6 +381,26 @@
       } else if (!profileMenu.contains(e.target)) {
         profileMenu.style.display = 'none';
       }
+    });
+
+    // Add pressed animation on touch/click
+    shopList.addEventListener('touchstart', function(e) {
+      const card = e.target.closest('.shop-card');
+      if (card) card.classList.add('pressed');
+    }, {passive: true});
+
+    shopList.addEventListener('touchend', function(e) {
+      const card = e.target.closest('.shop-card');
+      if (card) setTimeout(() => card.classList.remove('pressed'), 120);
+    }, {passive: true});
+
+    shopList.addEventListener('mousedown', function(e) {
+      const card = e.target.closest('.shop-card');
+      if (card) card.classList.add('pressed');
+    });
+    shopList.addEventListener('mouseup', function(e) {
+      const card = e.target.closest('.shop-card');
+      if (card) setTimeout(() => card.classList.remove('pressed'), 120);
     });
   </script>
 
