--- a/shop-list.html
+++ b/shop-list.html
@@ -7,16 +7,25 @@
   <style>
     /* Reduce font size and make it professional */
     html, body {
-      height: 100%;
+      height: auto;
+      min-height: 100vh;
       margin: 0;
       padding: 0;
       font-family: 'Roboto', Arial, sans-serif;
-      min-height: 100vh;
       box-sizing: border-box;
       background: transparent;
       overflow-x: hidden;
-      -webkit-overflow-scrolling: touch;
       font-size: 15px;
+    }
+
+    body {
+      min-height: 100vh;
+      width: 100vw;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: flex-start;
+      background: #f4f6f9;
     }
 
     .background {
@@ -132,27 +141,20 @@
       color: #172b90;
     }
 
-    body {
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-    }
-
     .container {
       border-radius: 18px;
       box-shadow: 0 8px 32px rgba(0,0,0,0.3);
-      padding: 40px 24px 32px 24px;
+      padding: 40px 24px 40px 24px; /* increased bottom padding */
       max-width: 900px;
       width: 100%;
-      margin: 24px auto 0 auto;
+      margin: 24px auto 32px auto; /* extra bottom margin */
       position: relative;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       gap: 28px;
       box-sizing: border-box;
+      background: #fff;
     }
 
     /* Shop card styles */
@@ -224,9 +226,10 @@
     @media (max-width: 700px) {
       .container {
         max-width: 100vw;
-        margin: 0;
-        padding: 8px 4px 8px 4px;
+        margin: 0 0 32px 0; /* extra bottom margin */
+        padding: 8px 4px 48px 4px; /* extra bottom padding */
         gap: 12px;
+        border-radius: 10px;
       }
       .shop-card {
         min-width: 98vw;
