--- a/shop-list.html
+++ b/shop-list.html
@@ -3,8 +3,15 @@
 <head>
   <title>UNM Cafeteria – Food Shops</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap" rel="stylesheet">
   <style>
+    /* Use Lato font for the whole page */
+    @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap');
+
+    html, body {
+      font-family: 'Lato', Arial, sans-serif;
+    }
+
     /* Reduce font size and make it professional */
     html, body {
       height: auto;
@@ -47,28 +54,30 @@
       position: relative;
     }
 
+    /* Make UNM Cafeteria title taller and more prominent */
     .caf-title {
       flex: 1;
       text-align: left;
-      font-size: 1.5rem;
+      font-size: 2.7rem;
       font-weight: 900;
-      letter-spacing: 1.2px;
+      letter-spacing: 2.5px;
       margin: 0 0 0 24px;
-      background: linear-gradient(90deg, #005f73 30%, #00aaff 100%);
+      background: linear-gradient(90deg, #0077b6 30%, #00cfff 100%);
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
-      text-shadow: 0 2px 12px rgba(0,0,0,0.10);
-      font-family: 'Roboto', Arial, sans-serif;
-      line-height: 1.1;
+      text-shadow: 0 6px 32px rgba(0,0,0,0.18), 0 2px 4px rgba(0,0,0,0.18);
+      font-family: 'Lato', Arial, sans-serif;
+      line-height: 1.25; /* increased height */
       display: flex;
       align-items: center;
-      gap: 8px;
+      gap: 16px;
     }
 
     .caf-title span {
-      font-size: 1.3rem;
-      margin-right: 4px;
+      font-size: 2.2rem;
+      margin-right: 10px;
+      filter: drop-shadow(0 2px 4px rgba(0,0,0,0.18));
     }
 
     .profile-btn {
@@ -242,8 +251,15 @@
         height: 90px;
       }
       .caf-title {
-        font-size: 1.1rem;
+        font-size: 1.7rem;
         margin-left: 8px;
+        letter-spacing: 1.2px;
+        line-height: 1.3;
+        gap: 8px;
+      }
+      .caf-title span {
+        font-size: 1.3rem;
+        margin-right: 4px;
       }
     }
   </style>
