--- a/shop-list.html
+++ b/shop-list.html
@@ -43,6 +43,41 @@
       z-index: -1;
     }
 
+    /* Hexagon header background - darker colors */
+    .hex-bg {
+      width: 100vw;
+      min-height: 200px;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 0;
+      overflow: hidden;
+      pointer-events: none;
+      background: linear-gradient(135deg, #073a47 0%, #0077b6 50%, #0097a7 100%);
+      transition: opacity 0.3s;
+      opacity: 1;
+    }
+    .hex-bg::before {
+      content: '';
+      position: absolute;
+      width: 150%;
+      height: 150%;
+      background-image: 
+        repeating-linear-gradient(60deg, transparent, transparent 35px, rgba(255,255,255,0.08) 35px, rgba(255,255,255,0.08) 70px),
+        repeating-linear-gradient(-60deg, transparent, transparent 35px, rgba(255,255,255,0.05) 35px, rgba(255,255,255,0.05) 70px);
+      /* animation removed */
+    }
+    .hex-bg::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: radial-gradient(circle at 30% 50%, rgba(77, 208, 225, 0.22), transparent 60%),
+                  radial-gradient(circle at 70% 30%, rgba(0,170,255,0.13), transparent 50%);
+    }
+
     .header-bar {
       width: 100%;
       max-width: 900px;
@@ -52,9 +87,11 @@
       justify-content: space-between;
       padding: 24px 0 0 0;
       position: relative;
+      z-index: 2;
+      background: transparent;
     }
 
-    /* Make UNM Cafeteria title taller and more prominent */
+    /* Make UNM Cafeteria title bright for dark background */
     .caf-title {
       flex: 1;
       text-align: left;
@@ -62,11 +99,11 @@
       font-weight: 900;
       letter-spacing: 2.5px;
       margin: 0 0 0 24px;
-      background: linear-gradient(90deg, #0077b6 30%, #00cfff 100%);
+      background: linear-gradient(90deg, #fff 40%, #ffe066 80%, #00eaff 100%);
       -webkit-background-clip: text;
       background-clip: text;
       color: transparent;
-      text-shadow: 0 6px 32px rgba(0,0,0,0.18), 0 2px 4px rgba(0,0,0,0.18);
+      text-shadow: 0 8px 32px rgba(0,0,0,0.22), 0 2px 4px rgba(0,0,0,0.18);
       font-family: 'Lato', Arial, sans-serif;
       line-height: 1.25; /* increased height */
       display: flex;
@@ -97,8 +134,8 @@
       height: 48px;
       border-radius: 50%;
       box-shadow: 0 2px 8px rgba(0,0,0,0.10);
-      border: 2px solid #00aaff;
-      background: #e0f7fa;
+      border: 2px solid #ffe066;
+      background: #073a47;
       object-fit: cover;
       transition: box-shadow 0.2s;
     }
@@ -266,6 +303,7 @@
 </head>
 
 <body>
+  <div class="hex-bg" id="hexBg"></div>
   <div class="background"></div>
 
   <div class="header-bar">
@@ -373,6 +411,18 @@
     shopList.addEventListener('mouseup', function(e) {
       const card = e.target.closest('.shop-card');
       if (card) setTimeout(() => card.classList.remove('pressed'), 120);
+    });
+
+    // Hide hex-bg when scrolling down
+    window.addEventListener('scroll', function() {
+      const hexBg = document.getElementById('hexBg');
+      if (window.scrollY > 10) {
+        hexBg.style.opacity = '0';
+        hexBg.style.pointerEvents = 'none';
+      } else {
+        hexBg.style.opacity = '1';
+        hexBg.style.pointerEvents = 'auto';
+      }
     });
   </script>
 
