--- a/shop-list.html
+++ b/shop-list.html
@@ -298,6 +298,28 @@
         font-size: 1.3rem;
         margin-right: 4px;
       }
+
+      /* Move title and profile logo higher and more right on mobile */
+      .header-bar {
+        max-width: 100vw;
+        padding-top: 4px;
+        align-items: flex-start;
+        position: relative;
+      }
+      .caf-title {
+        margin-top: 12px; /* move title higher */
+        margin-left: 8px;
+        font-size: 1.7rem;
+        letter-spacing: 1.2px;
+        line-height: 1.3;
+        gap: 8px;
+      }
+      .profile-btn {
+        position: absolute;
+        top: 0;
+        right: 8px;
+        margin: 0;
+      }
     }
   </style>
 </head>
