--- a/shop-list.html
+++ b/shop-list.html
@@ -276,6 +276,7 @@
         padding: 8px 4px 48px 4px; /* extra bottom padding */
         gap: 12px;
         border-radius: 10px;
+        margin-top: 56px !important; /* move boxes down below header */
       }
       .shop-card {
         min-width: 98vw;
@@ -316,7 +317,7 @@
       }
       .profile-btn {
         position: absolute;
-        top: 0;
+        top: 8px;      /* pull profile logo down a bit */
         right: 8px;
         margin: 0;
       }
