--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,7 @@
 
     /* Title styling */
     .menu-title {
-      font-size: 2.7rem;
+      font-size: 3.2rem;
       font-weight: 900;
       letter-spacing: 2.5px;
       margin: 0 auto;
@@ -44,23 +44,24 @@
       background: none !important;
       text-shadow: 0 8px 32px rgba(0,0,0,0.22), 0 2px 4px rgba(0,0,0,0.18);
       font-family: 'Lato', Arial, sans-serif;
-      line-height: 1.25;
+      line-height: 1.15;
       display: flex;
       align-items: center;
-      justify-content: center; /* Center horizontally */
+      justify-content: center;
       gap: 16px;
-      text-align: center;      /* Center text */
+      text-align: center;
+      width: 100%;
+      max-width: 100vw;
     }
 
     /* Responsive for mobile */
     @media (max-width: 700px) {
       .menu-title {
-        font-size: 1.7rem;
-        margin-left: 8px;
-        letter-spacing: 1.2px;
-        line-height: 1.3;
-        gap: 8px;
-        margin-top: 12px;
+        font-size: 2.5rem;
+        margin-left: 0;
+        margin-top: 18px;
+        justify-content: center;
+        text-align: center;
       }
     }
 
@@ -168,17 +169,17 @@
       overflow-x: auto;
       gap: 12px;
       padding: 12px 0 12px 0;
-      background: #fff;
-      border-radius: 16px;
+      background: transparent;
+      border-radius: 0;
       margin: 18px auto 0 auto;
-      max-width: 900px;
+      max-width: 100vw;
       position: sticky;
       top: 0;
       z-index: 20;
-      box-shadow: 0 2px 12px rgba(0,0,0,0.04);
+      box-shadow: none;
       scrollbar-width: none;
-      margin-left: 16px;
-      margin-right: 16px;
+      margin-left: 0;
+      margin-right: 0;
     }
     .category-bar::-webkit-scrollbar {
       display: none;
@@ -195,12 +196,12 @@
       cursor: pointer;
       transition: background 0.2s, color 0.2s;
       outline: none;
-      border: 2px solid transparent;
+      border: none;
     }
     .category-btn.active, .category-btn:focus {
-      background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);
+      background: #00aaff;
       color: #fff;
-      border: 2px solid #00aaff;
+      border: none;
     }
     .container-bg {
       max-width: 900px;
@@ -232,16 +233,14 @@
       scroll-margin-top: 90px;
     }
     .category-title {
-      font-size: 1.5rem;
-      font-weight: 700;
+      font-size: 1.7rem;
+      font-weight: 900;
       color: #005f73;
       margin: 20px 0 14px 0;
       text-align: left;
-      background: linear-gradient(90deg, black, #005f73);
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
+      background: none;
       letter-spacing: 0.3px;
+      /* Remove gradient, just bold and colored */
     }
     .menu-card {
       width: 100%;
@@ -732,6 +731,17 @@
 }
 .menu-card p {
   font-size: 0.92rem;
+}
+.menu-animate-img {
+  position: fixed;
+  z-index: 9999;
+  pointer-events: none;
+  transition: transform 0.7s cubic-bezier(.5,1.5,.5,1), opacity 0.7s;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  box-shadow: 0 4px 16px rgba(0,0,0,0.18);
+  opacity: 1;
 }
     </style>
 </head>
