--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,7 @@
 
     /* Title styling */
     .menu-title {
-      font-size: 3.2rem;
+      font-size: 9rem; /* 3x bigger than previous 3rem */
       font-weight: 900;
       letter-spacing: 2.5px;
       margin: 0 auto;
@@ -44,7 +44,7 @@
       background: none !important;
       text-shadow: 0 8px 32px rgba(0,0,0,0.22), 0 2px 4px rgba(0,0,0,0.18);
       font-family: 'Lato', Arial, sans-serif;
-      line-height: 1.15;
+      line-height: 1.05;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -57,7 +57,7 @@
     /* Responsive for mobile */
     @media (max-width: 700px) {
       .menu-title {
-        font-size: 2.5rem;
+        font-size: 4.5rem; /* Also much bigger on mobile */
         margin-left: 0;
         margin-top: 18px;
         justify-content: center;
