--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,7 @@
 
     /* Title styling */
     .menu-title {
-      font-size: 9rem; /* 3x bigger than previous 3rem */
+      font-size: 4rem; /* Smaller on laptop/desktop */
       font-weight: 900;
       letter-spacing: 2.5px;
       margin: 0 auto;
@@ -57,7 +57,7 @@
     /* Responsive for mobile */
     @media (max-width: 700px) {
       .menu-title {
-        font-size: 4.5rem; /* Also much bigger on mobile */
+        font-size: 7rem; /* Much bigger on phone */
         margin-left: 0;
         margin-top: 18px;
         justify-content: center;
