--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,7 @@
 
     /* Title styling */
     .menu-title {
-      font-size: 4rem; /* Smaller on laptop/desktop */
+      font-size: 3.5rem; /* Large on desktop/laptop */
       font-weight: 900;
       letter-spacing: 2.5px;
       margin: 0 auto;
@@ -139,44 +139,53 @@
       text-shadow: 0 4px 16px rgba(0,0,0,0.18), 0 1px 2px rgba(0,0,0,0.12);
     }
     .search-bar-container {
-      max-width: 900px;
-      margin: 18px auto 0 auto;
+      max-width: 600px;
+      margin: 32px auto 0 auto;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 0 18px;
+      position: relative;
+      z-index: 50;
+      background: linear-gradient(90deg, #e0f7fa 60%, #ffe066 100%);
+      border-radius: 32px;
+      box-shadow: 0 4px 24px rgba(0,0,0,0.10);
+      padding: 18px 24px;
     }
     #search-bar {
       width: 100%;
-      max-width: 400px;
-      padding: 10px 18px;
-      border-radius: 20px;
-      border: 1.5px solid #005f73;
-      font-size: 1.1rem;
-      font-family: 'Roboto', Arial, sans-serif;
+      max-width: 520px;
+      padding: 14px 24px;
+      border-radius: 32px;
+      border: 2px solid #00aaff;
+      font-size: 1.25rem;
+      font-family: 'Lato', Arial, sans-serif;
       outline: none;
-      margin-bottom: 8px;
+      margin: 0 auto;
       background: #f7fafd;
       color: #005f73;
-      transition: border 0.2s;
+      transition: border 0.2s, box-shadow 0.2s;
+      box-shadow: 0 2px 8px rgba(0,170,255,0.08);
+      text-align: center;
     }
     #search-bar:focus {
-      border: 2px solid #00aaff;
+      border: 2.5px solid #005f73;
       background: #fff;
+      box-shadow: 0 4px 16px rgba(0,170,255,0.12);
     }
+    /* Category bar background and style */
     .category-bar {
       display: flex;
       overflow-x: auto;
       gap: 12px;
       padding: 12px 0 12px 0;
-      background: transparent;
-      border-radius: 0;
+      background: linear-gradient(90deg, #e0f7fa 60%, #ffe066 100%) !important;
+      border-radius: 18px;
       margin: 18px auto 0 auto;
       max-width: 100vw;
       position: sticky;
       top: 0;
-      z-index: 20;
-      box-shadow: none;
+      z-index: 30; /* Raised above other elements */
+      box-shadow: 0 2px 12px rgba(0,0,0,0.08);
       scrollbar-width: none;
       margin-left: 0;
       margin-right: 0;
@@ -751,6 +760,9 @@
   <div class="header-bar">
     <h1 class="menu-title" id="menu-header">Menu</h1>
     <!-- You can add a profile button here if needed -->
+  </div>
+  <div class="top-bar">
+    <button class="back-btn" onclick="window.location.href='shop-list.html'">← Shop List</button>
   </div>
   <div class="menu-header-wrapper">
     <div class="menu-subtitle" id="menu-subtitle"></div>
