--- a/menu.html
+++ b/menu.html
@@ -36,7 +36,7 @@
 
     /* Title styling */
     .menu-title {
-      font-size: 3.5rem; /* Large on desktop/laptop */
+      font-size: 6rem; /* Much bigger on desktop/laptop */
       font-weight: 900;
       letter-spacing: 2.5px;
       margin: 0 auto;
@@ -57,7 +57,7 @@
     /* Responsive for mobile */
     @media (max-width: 700px) {
       .menu-title {
-        font-size: 7rem; /* Much bigger on phone */
+        font-size: 4rem; /* Still big on phone, but fits screen */
         margin-left: 0;
         margin-top: 18px;
         justify-content: center;
