--- a/shop-list.html
+++ b/shop-list.html
@@ -330,7 +330,7 @@
   <div class="background"></div>
 
   <div class="header-bar">
-    <div class="caf-title"><span>🍴</span>UNM Cafeteria</div>
+    <div class="caf-title"></span>UNM Cafeteria</div>
 
     <button class="profile-btn" id="profileBtn">
       <img id="profilePic" src="https://ui-avatars.com/api/?name=U&background=00aaff&color=fff&rounded=true">
@@ -451,3 +451,4 @@
 
 </body>
 </html>
+
