--- a/menu.html
+++ b/menu.html
@@ -144,40 +144,107 @@
       color: transparent;
       text-shadow: 0 4px 16px rgba(0,0,0,0.18), 0 1px 2px rgba(0,0,0,0.12);
     }
-    .search-bar-container {
-      max-width: 600px;
-      margin: 32px auto 0 auto;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: relative;
-      z-index: 50;
-      background: linear-gradient(90deg, #e0f7fa 60%, #ffe066 100%);
-      border-radius: 32px;
-      box-shadow: 0 4px 24px rgba(0,0,0,0.10);
-      padding: 18px 24px;
-    }
-    #search-bar {
-      width: 100%;
-      max-width: 520px;
-      padding: 14px 24px;
-      border-radius: 32px;
-      border: 2px solid #00aaff;
-      font-size: 1.25rem;
-      font-family: 'Lato', Arial, sans-serif;
-      outline: none;
-      margin: 0 auto;
-      background: #f7fafd;
-      color: #005f73;
-      transition: border 0.2s, box-shadow 0.2s;
-      box-shadow: 0 2px 8px rgba(0,170,255,0.08);
-      text-align: center;
-    }
-    #search-bar:focus {
-      border: 2.5px solid #005f73;
-      background: #fff;
-      box-shadow: 0 4px 16px rgba(0,170,255,0.12);
-    }
+    /* --- Professional, standard search bar --- */
+.search-bar-container {
+  max-width: 600px;
+  margin: 32px auto 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  z-index: 50;
+  background: #fff;
+  border-radius: 32px;
+  box-shadow: 0 2px 12px rgba(0,0,0,0.08);
+  padding: 12px 18px;
+  border: 1.5px solid #e0e0e0;
+}
+
+#search-bar {
+  width: 100%;
+  max-width: 520px;
+  padding: 12px 20px;
+  border-radius: 24px;
+  border: 1.5px solid #b0b0b0;
+  font-size: 1.15rem;
+  font-family: 'Lato', Arial, sans-serif;
+  outline: none;
+  margin: 0 auto;
+  background: #fafbfc;
+  color: #222;
+  transition: border 0.2s, box-shadow 0.2s;
+  box-shadow: none;
+  text-align: left;
+}
+
+#search-bar:focus {
+  border: 1.5px solid #0077b6;
+  background: #fff;
+  box-shadow: 0 2px 8px rgba(0,119,182,0.08);
+}
+
+/* --- Fix mobile font size for menu-title --- */
+@media (max-width: 700px) {
+  .menu-title {
+    font-size: 3.5rem !important;
+    margin-left: 0;
+    margin-top: 18px;
+    justify-content: center;
+    text-align: center;
+  }
+}
+@media (max-width: 500px) {
+  .menu-title {
+    font-size: 2.5rem !important;
+  }
+}
+
+/* --- Make category bar fit full width on phone --- */
+.category-bar {
+  display: flex;
+  overflow-x: auto;
+  gap: 12px;
+  padding: 12px 0 12px 0;
+  background: linear-gradient(90deg, #e0f7fa 60%, #ffe066 100%) !important;
+  border-radius: 18px;
+  margin: 18px auto 0 auto;
+  max-width: 100vw;
+  position: sticky;
+  top: 0;
+  z-index: 30;
+  box-shadow: 0 2px 12px rgba(0,0,0,0.08);
+  scrollbar-width: none;
+  margin-left: 0;
+  margin-right: 0;
+}
+
+@media (max-width: 700px) {
+  .category-bar {
+    width: 100vw;
+    max-width: 100vw;
+    border-radius: 0;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    left: 0;
+    right: 0;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+@media (max-width: 500px) {
+  .category-bar {
+    width: 100vw;
+    max-width: 100vw;
+    border-radius: 0;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
+    left: 0;
+    right: 0;
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
     /* Category bar background and style */
     .category-bar {
       display: flex;
